other/replace-nodeSelector/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  nodeSelector:
    node-role.kubernetes.io/worker-abc: ""
  containers:
  - name: bb
    image: busybox:1.35
