other/replace-nodeSelector/.chainsaw-test/podcontroller-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      nodeSelector:
        node.kubernetes.io/worker-abc: ""
      containers:
      - name: bb
        image: busybox:1.35
