other/replace-nodeSelector/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: replace-nodeselector
status:
  ready: true
