other/replace-nodeSelector/replace-nodeselector.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: replace-nodeselector
  annotations:
    policies.kyverno.io/title: Replace nodeSelector
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.11.1
    policies.kyverno.io/minversion: 1.9.0
    kyverno.io/kubernetes-version: "1.27"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The nodeSelector field, which uses labels to select the node for Pod scheduling based on specific needs, is updated by this policy to replace the label node-role.kubernetes.io/worker-abc with node.kubernetes.io/worker-abc in the Pod spec.
spec:
  rules:
  - name: replace-nodeselector
    match:
      resources:
        kinds:
        - Pod
    #Removes the old node selector (node-role.kubernetes.io/worker-abc) by setting its value to null.
    mutate:
      patchStrategicMerge:
        spec:
          nodeSelector:
            node.kubernetes.io/worker-abc: ""
            node-role.kubernetes.io/worker-abc: null
