other/replace-nodeSelector/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: replace-nodeselector
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../replace-nodeselector.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: podcontroller-resources.yaml
    - apply:
        file: pod-resources.yaml
  - name: step-03
    try:
    - assert:
        file: podcontroller-patched.yaml
    - assert:
        file: pod-resources-patched.yaml
